--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 				<p>lastly...</p>
 				<p>I'd like to wish you one more time</p>
 				<p>a very happy birthday Snigdha</p>
-				<p><a>Click Here</a> to see your gift</p>
+				<p><a href="https://sambitmallick2003.github.io/portfolio/">Click Here</a> to see your gift</p>
 			</div>
 		</div>
 		<div class="navbar navbar-fixed-bottom">
